# piper-sample-generator

./: .gitignore  CHANGELOG.md  ONNX_SUPPORT.md  README.md  augment.py  generate_samples.py  pylintrc  pyproject.toml  requirements.txt
models/: de_DE-mls-medium.pt.json  en-us-libritts-high.pt.json  en_US-libritts_r-medium.pt.json  fr_FR-mls-medium.pt.json  nl_NL-mls-medium.pt.json  pt_PT-tugao-medium.onnx.json
piper_sample_generator/: __init__.py  __main__.py  augment.py
piper_train/vits/: models.py
script/: format  lint  run  setup
