[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "piper-sample-generator"
version     = "3.2.0"
license     = {text = "MIT"}
description = "Generate TTS audio samples for training wake word systems"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["piper", "sample", "tts", "wakeword"]
requires-python = ">=3.9.0"
dependencies = [
    "audiomentations==0.33.0",
    "piper-tts==1.3.0",
    "numpy>=2,<3",
    "torch>=2,<3",
    "torchaudio",
    "webrtcvad",
]

[project.optional-dependencies]
dev = [
    "black==22.12.0",
    "flake8==6.0.0",
    "isort==5.11.3",
    "mypy==0.991",
    "pylint==2.15.9",
]

[project.urls]
"Source Code" = "http://github.com/rhasspy/piper-sample-generator"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true

[tool.setuptools.packages.find]
include = ["piper_sample_generator*"]

[tool.setuptools.package-data]
piper_sample_generator = ["impulses/*.wav"]
